--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-
+  "homepage": "https://romanca.github.io/todoist-clone",
   "name": "todoist-clone",
 
   "version": "0.1.0",
@@ -11,7 +11,7 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
 
     "@reach/router": "^1.3.4",
-
+  
     "@testing-library/jest-dom": "^5.11.4",
 
     "@testing-library/react": "^11.1.0",
@@ -32,6 +32,8 @@
 
   "scripts": {
 
+    "predeploy":"npm run deploy",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
 
     "build": "react-scripts build",
