--- a/package.json
+++ b/package.json
@@ -1,90 +1,53 @@
 {
   "homepage": "https://romanca.github.io/todoist-clone",
   "name": "todoist-clone",
-
   "version": "0.1.0",
-
   "private": true,
-
   "dependencies": {
-
     "@fortawesome/fontawesome-free": "^5.15.2",
-
     "@reach/router": "^1.3.4",
-  
     "@testing-library/jest-dom": "^5.11.4",
-
     "@testing-library/react": "^11.1.0",
-
     "@testing-library/user-event": "^12.1.10",
-
     "react": "^17.0.2",
-
     "react-dom": "^17.0.2",
-
     "react-scripts": "4.0.3",
-
     "styled-components": "^5.2.3",
-
-    "web-vitals": "^1.0.1"
-
+    "web-vitals": "^1.0.1",
+    "react-poppop": "^1.5.0"
   },
 
   "scripts": {
-
     "predeploy":"npm run deploy",
     "deploy":"gh-pages -d build",
     "start": "react-scripts start",
-
     "build": "react-scripts build",
-
     "test": "react-scripts test",
-
     "eject": "react-scripts eject"
-
   },
 
   "eslintConfig": {
-
     "extends": [
-
       "react-app",
-
       "react-app/jest"
-
     ]
-
   },
 
   "browserslist": {
-
     "production": [
-
-      ">0.2%",
-
+      ">0.2%", 
       "not dead",
-
       "not op_mini all"
-
     ],
-
     "development": [
-
       "last 1 chrome version",
-
       "last 1 firefox version",
-
       "last 1 safari version"
-
     ]
-
   },
 
   "devDependencies": {
-
     "gh-pages": "^3.1.0"
-
   }
-
 }
 
