--- a/package.json
+++ b/package.json
@@ -9,33 +9,32 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "date-fns": "^2.21.1",
     "react": "^17.0.2",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^17.0.2",
+    "react-poppop": "^1.5.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
-    "web-vitals": "^1.0.1",
-    "react-poppop": "^1.5.0"
+    "web-vitals": "^1.0.1"
   },
-
   "scripts": {
-    "predeploy":"npm run deploy",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run deploy",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
-
   "browserslist": {
     "production": [
-      ">0.2%", 
+      ">0.2%",
       "not dead",
       "not op_mini all"
     ],
@@ -45,9 +44,7 @@
       "last 1 safari version"
     ]
   },
-
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
 }
-
