--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "homepage": "https://romanca.github.io/todoist-clone",
   "name": "todoist-clone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
+    "@heroicons/react": "^1.0.1",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-datepicker": "^3.1.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-poppop": "^1.5.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
