--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://romanca.github.io/my-app",
   "name": "todoist-clone",
   "version": "0.1.0",
   "private": true,
@@ -46,6 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.2"
   }
 }
