--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://romanca.github.io/my-app",
+  "homepage": "http://romanca.github.io/todoist-clone",
   "name": "todoist-clone",
   "version": "0.1.0",
   "private": true,
