--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.21.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-datepicker": "^3.1.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-poppop": "^1.5.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "2.x.x",
     "react-styled-toggle": "^1.0.18",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
@@ -24,12 +25,19 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
     ]
   },
   "browserslist": {
@@ -44,5 +52,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/preset-react": "^7.14.5"
+  }
 }
