--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todoist-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://romanca.github.io/todoist-clone/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@heroicons/react": "^1.0.1",
@@ -10,7 +11,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "date-fns": "^2.21.1",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-datepicker": "^3.1.3",
     "react-dom": "^17.0.2",
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5"
+    "@babel/preset-react": "^7.14.5",
+    "gh-pages": "^3.2.3"
   }
 }
