--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-poppop": "^1.5.0",
-    "react-scripts": "2.x.x",
+    "react-scripts": "4.0.3",
     "react-styled-toggle": "^1.0.18",
+    "react-styleguidist": "^11.1.7",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
   },
